# capymanga

./: .ocamlformat  LICENSE  Makefile  README.md  capy.install  capy.opam  capy.opam.template  dune-project
.github/workflows/: blank.yml
app/capymanga/: README.md
app/capymanga/mangadex_api/: search.ml  types.ml
app/capymanga/mangadex_api/src/: author.ml  author.mli  chapter_feed.ml  chapter_feed.mli  chapter_images.ml  chapter_images.mli  cover.ml  cover.mli  dune  mangadex_api.ml  mangadex_api.mli  scanlation_group.ml  scanlation_group.mli  search.ml  search.mli  types.ml  types.mli
app/capymanga/mangadex_api/test/: big_chapter_feed_regression.json  big_response.json  big_response2.json  big_response3.json  chapter_query_response.json  dummy_search_response.json  dune  test_author.ml  test_big_search.ml  test_chapter_query.ml  test_manga_feed.ml  test_scanlation_group.ml  test_search.ml
app/capymanga/src/: #about.ml#  #capymanga.ml#  about.ml  about.mli  capymanga.ml  capymanga.mli  chapter_list.ml  chapter_list.mli  chapter_viewer.ml  chapter_viewer.mli  component.ml  dune  image_prefetcher.ml  image_prefetcher.mli  instructions.ml  instructions.mli  kitty.ml  kitty.mli  loading_or_error.ml  loading_state.ml  loading_state.mli  manga_cover.ml  manga_cover.mli  manga_search.ml  manga_search.mli  manga_table.ml  manga_table.mli  manga_viewer.ml  manga_viewer.mli  mock.ml  mock.mli  navigation.ml  navigation.mli  outside_world.ml  outside_world.mli  page.ml  page.mli  scanlation_group_cache.ml  scanlation_group_cache.mli  scroller.ml  (+13 more)
app/capymanga/test/: dune  test_about_page.ml  test_capy_manga.ml  test_capy_manga.mli  test_clock.ml  test_dimensions.ml  test_scrolling_on_search_page.ml  test_search.ml  test_util.ml  test_util.mli  test_utils.mli  test_viewer.ml
app/capymanga/test/test_data/: dune  mangadex_api_dummy_data.ml  mangadex_api_dummy_data.mli  mangadex_author_test_data.json  mangadex_scanlation_group_test_data.json  mob_psycho_mangadex_chapter_feed_test_data.json  one_punch_man_cover_test_data.json  one_punch_man_search_test_data.json
app/mandelbrot/src/: complex.ml  drawing_style.ml  drawing_style.mli  dune  mandelbrot.ml  mandelbrot.mli  render.ml  render.mli
app/mandelbrot/test/: dune  test_mandelbrot_render.ml
app/pacman-sort/src/: dune  package.ml  package.mli  pacman_sort.ml  pacman_sort.mli
app/pacman-sort/test/: dune  test_pacman_sort.ml
lib/capytui/examples/capy_example/: main.ml
lib/capytui/examples/clock_example/: main.ml
lib/capytui/examples/counters/: main.ml
lib/capytui/examples/counters/src/: capytui_counters_example.ml  capytui_counters_example.mli  dune
lib/capytui/examples/counters/test/: dune  test_counters.ml
lib/capytui/examples/events/: main.ml
lib/capytui/examples/hello_world/: dune  main.ml
lib/capytui/examples/kitty_graphics_protocol_example/: dune  main.ml  main.py
lib/capytui/examples/responsive_dimensions/: main.ml
lib/capytui/src/: attr.ml  attr.mli  capy.ml  capy.mli  capytui.ml  capytui.mli  component.mli  cursor.ml  cursor.mli  dimensions.ml  dimensions.mli  dune  effect.ml  effect.mli  event.ml  event.mli  image.mli  loop.ml  loop.mli  node.ml  node.mli  position.mli  start.ml  start.mli  start_params.ml  start_params.mli  state_management.ml  state_management.mli  stubs.c  term.ml  term.mli
lib/capytui/test/: capy_test.ml  capytui_test.ml  capytui_test.mli  dune
lib/capytui/test/integration_tests/: dune  test-event-handling.t
lib/capytui/test/of_capytui_itself/: dune  test_clock.ml  test_dimensions.ml  test_events.ml
lib/capytui/tui/catpuccin/example/: dune  main.ml
lib/capytui/tui/catpuccin/src/: capytui_catpuccin.ml  capytui_catpuccin.mli  dune
lib/capytui/tui/layout/src/: capytui_layout.mli  dune
lib/capytui/tui/scrollable_list/src/: capytui_scrollable_list.ml  capytui_scrollable_list.mli  dune
lib/capytui/tui/scroller/: README.md
lib/capytui/tui/scroller/src/: capytui_scroller.ml  capytui_scroller.mli  dune
lib/capytui/tui/scroller/test/: dune  test_capytui_scroller.ml
lib/capytui/tui/textbox/: README.md
lib/capytui/tui/textbox/src/: capytui_textbox.ml  capytui_textbox.mli  dune
lib/capytui/tui/textbox/test/: dune  test_capytui_textbox.ml
