(library
 (name mangadex_api_test)
 (libraries core expect_test_helpers_core mangadex_api)
 (inline_tests)
 (preprocess
  (pps ppx_jane)))

(rule
 (targets embedded_files.ml embedded_files.mli)
 (deps
  %{bin:ocaml-embed-file}
  ./dummy_search_response.json
  ./big_response.json
  ./big_response2.json
  ./big_response3.json
  ./author_dummy_response.json
  ./dummy_mangadex_manga_feed.json
  ./big_chapter_feed_regression.json
  ./chapter_query_response.json
  ;;
  )
 (action
  (bash "%{deps} -output embedded_files")))
